Finish image generation algorithm

--- a/.env
+++ b/.env
@@ -1,12 +1,11 @@
 ## Collection configuration
 #
-COLLECTION_SIZE="1" # Total size of the collection - how many images will be generated
+COLLECTION_SIZE="100" # Total size of the collection - how many images will be generated
 COLLECTION_DNA_PREFIX="0" # Prefix to add to generate NFT collection, used to distinguish collection generations
 COLLECTION_DESCRIPTION="Desert Island NFT collection" # Description of the collection
-
-## App configuration
-#
-INPUT_DIR="input/"
+COLLECTION_START_INDEX="1"
+COLLECTION_OUTPUT_DIR="output"
+COLLECTION_INPUT_DIR="input"
 
 ## Pinata configuration
 #
