--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@
 COLLECTION_SIZE="100" # Total size of the collection - how many images will be generated
 COLLECTION_DNA_PREFIX="0" # Prefix to add to generate NFT collection, used to distinguish collection generations
 COLLECTION_DESCRIPTION="Desert Island NFT collection" # Description of the collection
-COLLECTION_START_INDEX="1"
-COLLECTION_OUTPUT_DIR="output"
-COLLECTION_INPUT_DIR="input"
+COLLECTION_START_INDEX="1" # From which index the collection will start
+COLLECTION_OUTPUT_DIR="output" # Output directory for generated files
+COLLECTION_INPUT_DIR="input" # Input directory for layers
 
 ## Pinata configuration
 #
