Gitignore .env file and add instead .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,9 @@
+## Sample .env configuration file
+
 ## Collection configuration
 #
 COLLECTION_SIZE="100" # Total size of the collection - how many images will be generated
-COLLECTION_DNA_PREFIX="0" # Prefix to add to generate NFT collection, used to distinguish collection generations
+COLLECTION_DNA_PREFIX="1" # Prefix to add to generate NFT collection, used to distinguish collection generations
 COLLECTION_DESCRIPTION="Desert Island NFT collection" # Description of the collection
 COLLECTION_START_INDEX="1" # From which index the collection will start
 COLLECTION_OUTPUT_DIR="output" # Output directory for generated files
