Remove improper concurrency, add pinata options as model

--- a/.env.sample
+++ b/.env.sample
@@ -11,7 +11,7 @@ COLLECTION_INPUT_DIR="input" # Input directory for layers
 
 ## Pinata configuration
 #
-PINATA_UPLOAD_ENABLED="true"
+PINATA_UPLOAD_ENABLED="false"
 PINATA_API_KEY=""
 PINATA_API_SECRET=""
 
