--- a/util/metadata_updater/Makefile
+++ b/util/metadata_updater/Makefile
@@ -1,9 +1,6 @@
 mod-vendor:
 	go mod tidy && go mod vendor
 
-clean:
-	rm -Rf ./output/images/* && rm -Rf ./output/traits/*
-
 build:
 	@go build
 
@@ -11,7 +8,7 @@ test:
 	@go list ./... | xargs go test
 
 run: build
-	@./desert-island-go
+	@./metadata_updater
 
 validations:
 	@golangci-lint run
